force-app/main/default/objects/Application_Answer__c/Application_Answer__c.object-meta.xml
<CustomObject>
    <description>An answer to an individual Question in an Application</description>
    <label>Application Answer</label>
    <nameField>
        <displayFormat>ANS-{0000000}</displayFormat>
        <label>Application Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>