force-app/main/default/objects/Application_Answer__c/fields/Date_Answer__c.field-meta.xml
<CustomField>
    <fullName>Date_Answer__c</fullName>
    <description>The answer given to a question with a Date field type</description>
    <inlineHelpText>The answer given to a question with a Date field type</inlineHelpText>
    <label>Date Answer</label>
    <type>Date</type>
</CustomField>