force-app/main/default/objects/Application_Answer__c/fields/Number_Answer__c.field-meta.xml
<CustomField>
    <fullName>Number_Answer__c</fullName>
    <description>The answer given to a question with a Number field type</description>
    <inlineHelpText>The answer given to a question with a Number field type</inlineHelpText>
    <label>Number Answer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>