force-app/main/default/objects/Application_Answer__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>The question prompt that the applicant responded to</description>
    <inlineHelpText>The question prompt that the applicant responded to</inlineHelpText>
    <label>Question</label>
    <length>255</length>
    <type>Text</type>
</CustomField>