force-app/main/default/objects/Application_Answer__c/fields/Source_Question__c.field-meta.xml
<CustomField>
    <fullName>Source_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Application Answers</relationshipLabel>
    <relationshipName>Application_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>